# BrunetCo-OS

./: .env.example  .gitignore  CONTRIBUTING.md  DECISIONS.md  Makefile  README.md  eslint.config.js  make.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
Design Summary/: IP-OS-SPEC-v0.15.md  IP-OS-TRACKER.md
Detailed Design/: 00-README-START-HERE.md  01-decision-register.md  02-vision-principles-architecture.md  03-modules-M1-M4-docketing-billing-expenses-fees.md  04-modules-M5-M8-documents-email-crm-marketing.md  05-modules-M9-M11-workflow-eos-prior-art-utilities.md  06-agent-roster-A0-A18.md  07-appendix-A-file-conventions.md  08-discovery-findings-appcoll-sharepoint-data.md  09-research-and-uploaded-documents.md  10-testing-cutover-open-items-action-items.md  11-build-tracker.md  14-canonical-spec-v0.17-FULL.md  15-canonical-tracker-v18-FULL.md  16-WP0.7-scaffold-prompt.md  (+2 more)
apps/api/: pyproject.toml
apps/api/app/: deps.py  errors.py  main.py  mcp_server.py
apps/api/app/routes/: audit.py  boards.py  capacity.py  conflicts.py  docketing.py  drafting.py  eos.py  eos_reports.py  families.py  knowledge_base.py  matters.py  micro_requests.py  my_day.py  orchestrator.py  permissions_admin.py  prior_art.py  projects.py  reminders.py  reports.py  rules.py  watchers.py
apps/api/tests/: test_annuities.py  test_api_permissions.py  test_assignment.py  test_assignment_db.py  test_audit_trail.py  test_boards.py  test_boards_db.py  test_conflicts.py  test_csv_io.py  test_csv_io_db.py  test_deadlines.py  test_docket_views.py  test_docketing_engine.py  test_domain_rls.py  test_drafting_api.py  test_drafting_core.py  test_eos.py  test_eos_db.py  test_eos_reporting_db.py  test_health.py  test_knowledge_base.py  test_knowledge_base_db.py  test_llm_routing.py  test_matter_crud.py  test_micro_requests_db.py  test_my_day.py  test_orchestrator.py  test_prior_art.py  test_prior_art_matrix.py  test_project_planner.py  test_projects.py  test_projects_db.py  test_redaction.py  test_references.py  test_reminders.py  test_reminders_db.py  test_reports.py  test_reports_db.py  test_rls.py  test_rule_builder.py  (+8 more)
apps/api/tests/fixtures/: README.md  appcoll_task_types_sample.csv
apps/workers/: pyproject.toml
apps/workers/tests/: test_cipo_watcher.py  test_digest.py  test_worker.py
apps/workers/worker_app/: cipo_scraper.py  cipo_watcher.py  digest.py  worker.py
(+54 files in other folders)
