[project]
name = "brunetco-os"
version = "0.7.0"
description = "BrunetCo OS — IP practice-management platform (monorepo root)"
requires-python = ">=3.12"

# Root is a uv workspace aggregator. Actual code lives in the members below.
[tool.uv.workspace]
members = ["apps/api", "apps/workers", "packages/py-shared"]

[tool.uv.sources]
py-shared = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
    "httpx>=0.27",
    "psycopg[binary]>=3.2",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "**/__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--import-mode=importlib"
testpaths = ["apps/api/tests", "apps/workers/tests"]
