[project]
name = "brunetco-api"
version = "0.7.0"
description = "BrunetCo OS API — FastAPI, schema source of truth"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "py-shared",
    "mcp>=1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
