[project]
name = "brunetco-workers"
version = "0.7.0"
description = "BrunetCo OS event-driven workers (Postgres-backed queue)"
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.2",
    "py-shared",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["worker_app"]
