[project]
name = "brunetco-workers"
version = "0.7.0"
description = "BrunetCo OS event-driven workers (Postgres-backed queue)"
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.2",
    "py-shared",
    "playwright>=1.40",       # CIPO scrape engine (WP 6.2); browsers install via `playwright install chromium`
    "2captcha-python>=1.2",   # reCAPTCHA solve for the CIPO download modal (WP 6.2)
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["worker_app"]
